--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <section class="container">
     <div class="card">
       <div class="card__title">
-        <i></i>
+        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon"></i>
         <h3>To-Do</h3>
       </div>
       <div class="card__content">
@@ -38,7 +38,7 @@
     </div>
     <div class="card">
       <div class="card__title">
-        <i></i>
+        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon"></i>
         <h3>In Progres</h3>
       </div>
       <div class="card__content">
@@ -60,7 +60,7 @@
     </div>
     <div class="card">
       <div class="card__title">
-        <i></i>
+        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon"></i>
         <h3>Done</h3>
       </div>
       <div class="card__content">
