feat: add heading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <main>
+  <h1>ToDo App</h1>
   <section class="container">
     <label for="task" *ngIf="label_for_task">please fill the input!</label>
     <input type="text" name="task" [(ngModel)]="task_title" required />
