--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,13 @@ main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    h1 {
+        padding-left: 0.5rem;
+        padding-bottom: 1rem;
+        color: rgb(41, 20, 155);
+        border-bottom: 1px solid brown;
+    }
 }
 .container {
     margin: 1rem;
@@ -17,7 +24,7 @@ main {
 .card {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    flex: 1;
     border-radius: 0.5rem;
     box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.75);
     -webkit-box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.75);
