--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
     <label for="task" *ngIf="label_for_select" class="select">please select item!</label>
     <select name="difficulty" id="difficulty" [(ngModel)]="selectedOption" >
       <option  selected [ngValue]="''" hidden>selected</option>
-      <option value="easy">easy</option>
-      <option value="medium">medium</option>
-      <option value="hard">hard</option>
+      <option  [ngValue]="difficulty.easy">{{difficulty.easy}}</option>
+      <option  [ngValue]="difficulty.medium">{{difficulty.medium}}</option>
+      <option  [ngValue]="difficulty.hard">{{difficulty.hard}}</option>
     </select>
     <button type="submit" (click)="addTask(task_title, selectedOption)" class="btn">
       add task
