--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,86 +3,77 @@
   <section class="container">
     <label for="task" *ngIf="label_for_task">please fill the input!</label>
     <input type="text" name="task" [(ngModel)]="task_title" required />
-    <label for="task" *ngIf="label_for_select" class="select">please select item!</label>
-    <select name="difficulty" id="difficulty" [(ngModel)]="selectedOption" >
-      <option  selected [ngValue]="''" hidden>selected</option>
-      <option  [ngValue]="difficulty.easy">{{difficulty.easy}}</option>
-      <option  [ngValue]="difficulty.medium">{{difficulty.medium}}</option>
-      <option  [ngValue]="difficulty.hard">{{difficulty.hard}}</option>
+    <label for="task" *ngIf="label_for_select" class="select"
+      >please select item!</label
+    >
+    <select name="difficulty" id="difficulty" [(ngModel)]="selectedOption">
+      <option selected [ngValue]="''" hidden>selected</option>
+      <option [ngValue]="difficulty.easy">{{ difficulty.easy }}</option>
+      <option [ngValue]="difficulty.medium">{{ difficulty.medium }}</option>
+      <option [ngValue]="difficulty.hard">{{ difficulty.hard }}</option>
     </select>
-    <button type="submit" (click)="addTask(task_title, selectedOption)" class="btn">
+    <button
+      type="submit"
+      (click)="addTask(task_title, selectedOption)"
+      class="btn"
+    >
       add task
     </button>
   </section>
   <section class="container">
     <div class="card">
       <div class="card__title">
-        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon"></i>
+        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon" /></i>
         <h3>To-Do</h3>
       </div>
       <div class="card__content">
         <ng-container *ngFor="let item of todo_list; let i = index">
-          <div class="todo-list-item" draggable=true>
-            <div class="todo-list-item__content">
-             <p>{{i+1}}. {{item.title}}</p>
-             <button class="btn" [ngClass]="getStyle(item.difficulty)">{{item.difficulty}}</button>
-            </div>
-            <div class="todo-list-item__actions">
-              <button (click)="moveItem(i, todo_list)" class="btn btn--forward">></button>
-              <button (click)="deleteItem(i)" class="btn btn--delete">X</button>
-            </div>
-         </div>
+          <app-task [task]="item" [index]="i" 
+          (delete)="deleteTaskHandler($event)"
+          (item)="moveItemHandler($event)"
+          (itemBack)="moveItemBackHandler($event)"
+          >
+
+          </app-task>
         </ng-container>
-        <ng-container *ngIf="todo_list.length; else empty">
-        </ng-container>
+        <ng-container *ngIf="todo_list.length; else empty"> </ng-container>
       </div>
     </div>
     <div class="card">
       <div class="card__title">
-        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon"></i>
+        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon"/></i>
         <h3>In Progres</h3>
       </div>
       <div class="card__content">
         <ng-container *ngFor="let item of inProgres_list; let i = index">
-          <div class="todo-list-item" *ngIf="inProgres_list.length; else empty">
-            <div class="todo-list-item__content">
-             <p>{{i+1}}. {{item.title}}</p>
-             <button class="btn" [ngClass]="getStyle(item.difficulty)">{{item.difficulty}}</button>
-            </div>
-            <div class="todo-list-item__actions">
-              <button (click)="moveItemBack(i, inProgres_list)" class="btn btn--back"><</button>
-              <button (click)="moveItem(i, inProgres_list)" class="btn btn--forward">></button>
-            </div>
-         </div>
+          <app-task [task]="item" [index]="i" 
+          (delete)="deleteTaskHandler($event)"
+          (item)="moveItemHandler($event)"
+          (itemBack)="moveItemBackHandler($event)"
+          >
+
+          </app-task>
         </ng-container>
-        <ng-container *ngIf="inProgres_list.length; else empty">
-        </ng-container>
+        <ng-container *ngIf="inProgres_list.length; else empty"> </ng-container>
       </div>
     </div>
     <div class="card">
       <div class="card__title">
-        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon"></i>
+        <i><img src="../assets/bars-progress-solid.svg" alt="bars-icon" /></i>
         <h3>Done</h3>
       </div>
       <div class="card__content">
         <ng-container *ngFor="let item of done_list; let i = index">
-          <div class="todo-list-item" *ngIf="done_list.length; else empty">
-            <div class="todo-list-item__content">
-             <p>{{i+1}}. {{item.title}}</p>
-             <button class="btn" [ngClass]="getStyle(item.difficulty)">{{item.difficulty}}</button>
-            </div>
-            <div class="todo-list-item__actions">
-              <button (click)="moveItemBack(i, done_list)" class="btn btn--back"><</button>
-            </div>
-         </div>
+          <app-task [task]="item" [index]="i" 
+          (delete)="deleteTaskHandler($event)"
+          (item)="moveItemHandler($event)"
+          (itemBack)="moveItemBackHandler($event)"
+          >
+          </app-task>
         </ng-container>
-        <ng-container *ngIf="done_list.length; else empty">
-        </ng-container>
+        <ng-container *ngIf="done_list.length; else empty"> </ng-container>
       </div>
     </div>
   </section>
-
 </main>
-<ng-template #empty>
-    list is empty
-</ng-template>
+<ng-template #empty> list is empty </ng-template>
