--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,14 @@
       >please select item!</label
     >
     <select name="difficulty" id="difficulty" [(ngModel)]="selectedOption">
-      <option selected [ngValue]="''" hidden>selected</option>
+      <option selected [ngValue]="''" hidden>select</option>
       <option [ngValue]="difficulty.easy">{{ difficulty.easy }}</option>
       <option [ngValue]="difficulty.medium">{{ difficulty.medium }}</option>
       <option [ngValue]="difficulty.hard">{{ difficulty.hard }}</option>
     </select>
     <button
       type="submit"
-      (click)="addTask(task_title, selectedOption)"
+      (click)="addTask(task_title, selectedOption!)"
       class="btn"
     >
       add task
